--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
   wyoming-piper-en:
     image: rhasspy/wyoming-piper
     container_name: piper
+    restart: always
     ports:
       - 10200:10200
     volumes:
@@ -13,6 +14,7 @@ services:
     image: rhasspy/wyoming-whisper
     container_name: whisper
     privileged: true
+    restart: always
     ports:
       - 10300:10300
     volumes:
