--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,10 @@ services:
       - 10300:10300
     volumes:
       - ./config/whisper:/data
+      - /usr/lib/x86_64-linux-gnu/libcudnn_ops_infer.so.8:/usr/lib/x86_64-linux-gnu/libcudnn_ops_infer.so.8:ro
+      - /usr/lib/x86_64-linux-gnu/libcudnn_cnn_infer.so.8:/usr/lib/x86_64-linux-gnu/libcudnn_cnn_infer.so.8:ro
+      - /usr/lib/x86_64-linux-gnu/libcublasLt.so.11:/usr/lib/x86_64-linux-gnu/libcublasLt.so.12:ro
+      - /usr/lib/x86_64-linux-gnu/libcublas.so.11:/usr/lib/x86_64-linux-gnu/libcublas.so.12:ro
     command: --model medium-int8 --language en --beam-size 5 --device cuda
     runtime: nvidia
     deploy:
