--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,6 +34,12 @@ services:
             - driver: nvidia
               count: 1
               capabilities: [gpu]
+    healthcheck:
+      test: ["CMD", "sh", "-c", "echo -n | nc localhost 10200 || exit 1"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
   wyoming-whisper-en:
     container_name: whisper
