--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
               count: 1
               capabilities: [gpu]
     healthcheck:
-      test: ["CMD", "sh", "-c", "echo -n | nc localhost 10200 || exit 1"]
+      test: ["CMD", "sh", "-c", "timeout 2 bash -c '</dev/tcp/localhost/10200' || exit 1"]
       interval: 30s
       timeout: 5s
       retries: 3
